# nnoops-neural-net-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  READEME.md
benchmark/long_arithmetic/: CMakeLists.txt  unsigned_big_integer_bench.cpp
cmake/: functions.cmake  gtest.cmake  lib.pc.in
include/nnoops/: base_function.hpp  class_A.hpp  gradient_descent.hpp  neuron.hpp  quadratic_function.hpp  strutil.hpp
include/nnoops/algorithms/: gradient_descent.hpp
include/nnoops/functions/: argument.hpp  base_function.hpp  complex_function.hpp  gradient_descent.hpp  linear_function.hpp  linear_function2.hpp  log_loss_function.hpp  point.hpp  quadratic_function.hpp  relu_function.hpp  sigmoid_function.hpp  sum_function.hpp  tanh_function.hpp  utils.hpp
include/nnoops/long_arithmetic/: arith_error.hpp  big_decimal.hpp  big_float.hpp  big_integer.hpp  signed_big_integer.hpp  unsigned_big_integer.hpp
include/nnoops/neural_net/: base_neuron.hpp  neural_net.hpp  neuron.hpp
src/: CMakeLists.txt  class_A.cpp  gradient_descent.cpp  quadratic_function.cpp  strutil.cpp
src/algorithms/: CMakeLists.txt  gradient_descent.cpp
src/functions/: CMakeLists.txt  linear_function.cpp  quadratic_function.cpp  relu_function.cpp  sigmoid_function.cpp  tanh_function.cpp
src/log_arithmetic/: CMakeLists.txt  big_decimal.cpp
src/long_arithmetic/: CMakeLists.txt  big_decimal.cpp  big_float.cpp  signed_big_integer.cpp  unsigned_big_integer.cpp
test/: CMakeLists.txt  class_A_test.cpp  functions_test.cpp  gradient_descent_test.cpp  strutil_test.cpp
test/algorithms/: CMakeLists.txt  gradient_descent_test.cpp
test/functions/: CMakeLists.txt  argument_test.cpp  complex_function_test.cpp  functions_test.cpp  point_test.cpp
test/long_arithmetic/: CMakeLists.txt  big_decimal_test.cpp  big_float_test.cpp  big_integer_test.cpp  signed_big_integer_heavy_test.cpp  signed_big_integer_test.cpp  unsigned_big_integer_heavy_test.cpp  unsigned_big_integer_test.cpp
test/neural_net/: CMakeLists.txt  neural_net_test.cpp
